--- a/index.html
+++ b/index.html
@@ -2,22 +2,142 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Admin Login - Whistleblower</title>
+  <link rel="stylesheet" href="login_official.css" />
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      overflow: hidden;
+      font-family: Arial, sans-serif;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    #vanta-bg {
+      width: 100%;
+      height: 100vh;
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: -1;
+    }
+
+    .logo_img {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      position: absolute;
+      top: 2px;
+      left: 2rem;
+      z-index: 1;
+    }
+
+    .form {
+      background: rgba(255, 255, 255, 0.1);
+      padding: 4rem 5rem;
+      border-radius: 10px;
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+      backdrop-filter: blur(8px);
+      color: white;
+      transition: all 0.3s ease-in-out;
+    }
+
+    .form-title {
+      text-align: center;
+      font-size: 1.8rem;
+      margin-bottom: 1.5rem;
+      color: #fefefe;
+    }
+
+    .input-container {
+      margin-bottom: 1.2rem;
+    }
+
+    .input-container input {
+      width: 100%;
+      padding: 0.7rem;
+      border: none;
+      border-radius: 5px;
+      font-size: 1rem;
+      outline: none;
+      transition: box-shadow 0.3s ease;
+    }
+
+    .input-container input:focus {
+      box-shadow: 0 0 10px #00ffcc;
+    }
+
+    .login_button {
+      text-align: center;
+      margin-top: 1rem;
+    }
+
+    .login_button button {
+      padding: 0.6rem 1.5rem;
+      border: none;
+      border-radius: 5px;
+      background-color: #28a745;
+      color: white;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: box-shadow 0.3s ease, transform 0.2s ease;
+    }
+
+    .login_button button:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 12px #28a745;
+    }
+  </style>
 </head>
 <body>
-  <h2>🛡️ Admin Login</h2>
 
-  <form id="adminLoginForm">
-    <label>Admin ID:</label><br />
-    <input type="text" id="adminId" required /><br /><br />
+  <!-- Vanta Background -->
+  <div id="vanta-bg"></div>
 
-    <label>Password:</label><br />
-    <input type="password" id="adminPass" required /><br /><br />
+  <!-- Logo -->
+  <img src="logo.jpg" alt="Logo" class="logo_img" />
 
-    <button type="submit">Login</button>
+  <!-- Login Form -->
+  <form class="form" id="adminLoginForm">
+    <p class="form-title">Admin Login</p>
+
+    <div class="input-container">
+      <input placeholder="Admin ID" type="text" id="adminId" required />
+    </div>
+
+    <div class="input-container">
+      <input placeholder="Enter password" type="password" id="adminPass" required />
+    </div>
+
+    <div class="login_button">
+      <button type="submit">Login</button>
+    </div>
   </form>
 
+  <!-- Scripts -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.waves.min.js"></script>
   <script>
+    VANTA.WAVES({
+      el: "#vanta-bg",
+      mouseControls: true,
+      touchControls: true,
+      gyroControls: false,
+      minHeight: 200.00,
+      minWidth: 200.00,
+      scale: 1.00,
+      scaleMobile: 1.00,
+      color: 0x101010,
+      shininess: 41.00,
+      waveHeight: 6.5,
+      waveSpeed: 1.0,
+      zoom: 0.9
+    });
+
     document.getElementById('adminLoginForm').addEventListener('submit', function (e) {
       e.preventDefault();
 
@@ -26,7 +146,7 @@
 
       if (id === 'admin' && pass === 'admin123') {
         localStorage.setItem('adminLoggedIn', 'true');
-        window.location.href = 'adminDashboard.html'; // redirect to dashboard
+        window.location.href = 'adminDashboard.html';
       } else {
         alert('❌ Invalid admin credentials');
       }
